--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,19 +58,22 @@ workflows:
             branches:
               only: master
 
-      # Run only in git tag
-      # - notify_manual_approval:
-      #     requires:
-      #       - test
-      #     filters:
-      #       tags:
-      #         only: /^v.*/
-      #       branches:
-      #         ignore: /.*/
+  # Run only in git tag
+  release:
+    jobs:
+      - test
+      - notify_manual_approval:
+          requires:
+            - test
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
       - hold:
           type: approval
-          # requires:
-          #   - notify_manual_approval
+          requires:
+            - notify_manual_approval
           filters:
             tags:
               only: /^v.*/
