--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,25 +70,25 @@ workflows:
       - notify_manual_approval:
           requires:
             - test
-          # filters:
-          #   tags:
-          #     only: /^v.*/
+          filters:
+            tags:
+              only: /^v.*/
           #   branches:
           #     ignore: /.*/
       - hold:
           type: approval
           requires:
             - notify_manual_approval
-          # filters:
-          #   tags:
-          #     only: /^v.*/
+          filters:
+            tags:
+              only: /^v.*/
           #   branches:
           #     ignore: /.*/
       - production:
           requires:
             - hold
-          # filters:
-          #   tags:
-          #     only: /^v.*/
+          filters:
+            tags:
+              only: /^v.*/
           #   branches:
           #     ignore: /.*/
