--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,6 @@ jobs:
       - run:
           name: Production
           command: |
-            env
             echo "This is production"
 
   notify_manual_approval:
@@ -44,7 +43,7 @@ jobs:
             curl \
               -X POST \
               -H 'Content-type: application/json' \
-              --data "{\"text\": \"[${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}] Please approve deploy from <https://circleci.com/workflow-run/${CIRCLE_WORKFLOW_ID}|here>. \
+              --data "{\"text\": \"[${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}] Please approve deploy from <https://circleci.com/workflow-run/${CIRCLE_WORKFLOW_ID}|here>. \"}" \
               $SLACK_WEBHOOK_URL_DEPLOY_APPROVE
 
 workflows:
