--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
       - run:
           name: Production
           command: |
+            env
             echo "This is production"
 
   notify_manual_approval:
